include_directories(
  	${catkin_INCLUDE_DIRS}
    command
    consideration
    context
	robot
	util
	behavior)

set(BEHAVIOR_SRC
    behavior/AbstractBehavior.cpp
    behavior/AbstractBehavior.h
    behavior/AggressiveBehavior.cpp
    behavior/AggressiveBehavior.h
    behavior/PreventiveBehavior.cpp
    behavior/PreventiveBehavior.h
    behavior/ResearchBehavior.cpp
    behavior/ResearchBehavior.h
    behavior/BehaviorTypes.h
    behavior/BehaviorManager.cpp
    behavior/BehaviorManager.h)

set(COMMAND_SRC
    command/CommandQueue.h
    command/CommandQueue.cpp
    command/AbstractCommand.h
    command/AbstractCommand.cpp
    command/MovementCommand.cpp
    command/MovementCommand.h
	command/FollowCommand.cpp
	command/FollowCommand.h
    command/ObservationCommand.cpp
    command/ObservationCommand.h
    command/TopInteractionCommand.cpp
    command/TopInteractionCommand.h
    command/FrontInteractionCommand.cpp
    command/FrontInteractionCommand.h
    command/TakeOffCommand.cpp
    command/TakeOffCommand.h)

set(CONTEXT_SRC
    context/AbstractLine.cpp
    context/AbstractLine.h
	context/AbstractArena.h
	context/AbstractArena.cpp
    context/ArenaA.cpp
    context/ArenaA.h
    context/RedLine.cpp
    context/RedLine.h
    context/WhiteLine.cpp
    context/WhiteLine.h
    context/GreenLine.cpp
    context/GreenLine.h
    context/LineTypes.h)

set(ROBOT_SRC
    robot/AbstractRobot.h
    robot/AbstractRobot.cpp
    robot/QuadRobot.h
    robot/QuadRobot.cpp
    robot/TargetRobot.h
    robot/TargetRobot.cpp
    robot/RobotTypes.h robot/GreenTargetRobot.cpp robot/GreenTargetRobot.h robot/RedTargetRobot.cpp robot/RedTargetRobot.h)

set(CONSIDERATION_SRC
    consideration/PriorityEvaluationManager.cpp
    consideration/PriorityEvaluationManager.h
    consideration/AbstractConsideration.cpp
    consideration/AbstractConsideration.h
    consideration/QuadDistance.cpp
    consideration/QuadDistance.h
		consideration/DestinationConsideration.cpp
		consideration/DestinationConsideration.h
    consideration/ConsiderationTypes.h
    consideration/ClusterSize.cpp
    consideration/ClusterSize.h)

set(UTIL_SRC
    util/Line.cpp
    util/Line.h
    util/Segment.cpp
    util/Segment.h
    util/Timer.cpp
    util/Timer.h)

add_executable(elikos_ai
    Ai.cpp
    Agent.cpp
    Agent.h
    MessageHandler.h
    MessageHandler.cpp
    Configuration.h
    Configuration.cpp
    ${CONSIDERATION_SRC}
    ${COMMAND_SRC}
    ${CONTEXT_SRC}
    ${ROBOT_SRC}
	${UTIL_SRC}
	${BEHAVIOR_SRC})

target_link_libraries(elikos_ai
    ${catkin_LIBRARIES}
	yaml-cpp)
